Implement API changes with Queue entries
