# src/main/java/com/github/bjoernpetersen/deskbot/api/swag/api/impl/PlayerApiServiceImpl.java
@@ -2,14 +2,17 @@ package com.github.bjoernpetersen.deskbot.api.swag.api.impl;
 
 import com.github.bjoernpetersen.deskbot.api.swag.api.NotFoundException;
 import com.github.bjoernpetersen.deskbot.api.swag.api.PlayerApiService;
+import com.github.bjoernpetersen.deskbot.api.swag.model.QueueEntry;
 import com.github.bjoernpetersen.jmusicbot.MusicBot;
 import com.github.bjoernpetersen.jmusicbot.ProviderManager;
 import com.github.bjoernpetersen.jmusicbot.Song;
 import com.github.bjoernpetersen.jmusicbot.playback.Player;
+import com.github.bjoernpetersen.jmusicbot.playback.Queue;
 import com.github.bjoernpetersen.jmusicbot.user.InvalidTokenException;
 import com.github.bjoernpetersen.jmusicbot.user.Permission;
 import com.github.bjoernpetersen.jmusicbot.user.User;
 import com.github.bjoernpetersen.jmusicbot.user.UserManager;
+import com.github.bjoernpetersen.jmusicbot.user.UserNotFoundException;
 import java.util.Optional;
 import javax.validation.constraints.NotNull;
 import javax.ws.rs.core.Response;
@@ -23,7 +26,7 @@ public class PlayerApiServiceImpl extends PlayerApiService {
   private UserManager userManager;
 
   @Override
-  public Response dequeue(String authorization, @NotNull String songId, @NotNull String providerId,
+  public Response dequeue(String authorization, @NotNull QueueEntry queueEntry,
       SecurityContext securityContext) throws NotFoundException {
     User user;
     try {
@@ -36,10 +39,19 @@ public class PlayerApiServiceImpl extends PlayerApiService {
       return Response.status(Status.FORBIDDEN).build();
     }
 
+    com.github.bjoernpetersen.deskbot.api.swag.model.Song paramSong = queueEntry.getSong();
     Optional<Song> songOptional = Util
-        .lookupSong(providerManager, songId, providerId);
+        .lookupSong(providerManager, paramSong.getId(), paramSong.getProviderId());
     if (songOptional.isPresent()) {
-      player.getQueue().remove(songOptional.get());
+      User queueUser;
+      try {
+        queueUser = userManager.getUser(queueEntry.getUserName());
+      } catch (UserNotFoundException e) {
+        return Response.status(Status.BAD_REQUEST).build();
+      }
+      Song song = songOptional.get();
+      Queue.Entry entry = new Queue.Entry(song, queueUser);
+      player.getQueue().remove(entry);
       return getQueue(securityContext);
     } else {
       return Response.status(Status.NOT_FOUND).build();
@@ -47,12 +59,19 @@ public class PlayerApiServiceImpl extends PlayerApiService {
   }
 
   @Override
-  public Response enqueue(@NotNull String songId, @NotNull String providerId,
-      SecurityContext securityContext) throws NotFoundException {
-    Optional<Song> songOptional = Util
-        .lookupSong(providerManager, songId, providerId);
+  public Response enqueue(@NotNull String authorization, @NotNull String songId,
+      @NotNull String providerId, SecurityContext securityContext) throws NotFoundException {
+    User user;
+    try {
+      user = userManager.fromToken(authorization);
+    } catch (InvalidTokenException e) {
+      return Response.status(Status.UNAUTHORIZED).build();
+    }
+
+    Optional<Song> songOptional = Util.lookupSong(providerManager, songId, providerId);
     if (songOptional.isPresent()) {
-      player.getQueue().append(songOptional.get());
+      Queue.Entry entry = new Queue.Entry(songOptional.get(), user);
+      player.getQueue().append(entry);
       return getQueue(securityContext);
     } else {
       return Response.status(Status.NOT_FOUND).build();
